# Sediment

./: .gitignore  AGENTS.md  LICENSE  README.md  README_zh.md  install-client.sh  install.sh  patch_style.py  pyproject.toml  scores.json  scoring_result.json  setup.sh  spec.md
benchmarks/: TEST_PLAN.md
benchmarks/judge/: 概念.json  问答.json
benchmarks/scripts/: generate_report.py  harness_contract.py  isolated_build.py  offline_builder.py  run_all_scores.py  score_tc01.py  score_tc02.py  smoke_test.py
config/sediment/: config.yaml
design/: README.md  core-principles.md  sediment_build_plan.md  tacit_knowledge_system_v3.md  tacit_knowledge_system_v4.md  tacit_knowledge_system_v4_5.md
design/current/: delivery-roadmap.md  diagnostic-logging.md  enterprise-governance.md  entry-model.md  graph-view-interaction.md  interfaces-and-review-flow.md  overview.md  platform-architecture.md  retrieval-and-indexing.md  sample-workspace.md  validation-and-health.md  web-surfaces.md  workflows.md
design/evolution/: README.md  knowledge_universe_v1.md  knowledge_universe_v2_portal_os.md  tacit_knowledge_system_v3.md  tacit_knowledge_system_v4.md  tacit_knowledge_system_v4_5.md  tacit_knowledge_system_v5_insights_draft.md
docs/: offline-install-zh.md  offline-install.md
examples/: README.md  README_zh.md
examples/demo-materials/: README.md  explore-queries.md
examples/knowledge-base/: index.root.md
examples/scripts/: seed_runtime_demo.py
frontend/graph/: build.mjs  package-lock.json  package.json
knowledge-base/entries/: Access-Token.md  Authorization-Code-Flow.md  JWT.md  OAuth-2.0.md  OAuth-MOC.md  Sediment设计文档.md  示例-候选链接规则.md  示例-原子知识条目规范.md
knowledge-base/placeholders/: Refresh-Token.md  示例-占位文件说明.md
knowledge-base/sources/: source_map.json
mcp_server/: __init__.py  agent_runner.py  cli.py  control.py  i18n.py  instances.py  kb.py  launcher.py  llm_cli.py  platform_services.py  platform_store.py  retrieval.py  runtime.py  server.py  settings.py  web_ui.py  worker.py
scripts/: build_graph_assets.py  health_check.py  install-client.sh  kb_query.py  release_package.sh  setup.sh  tidy_utils.py
skills/: explore.md  health.md  ingest.md  tidy.md
skills/explore/: SKILL.md
skills/health/: SKILL.md
skills/ingest/: SKILL.md  __init__.py
skills/tidy/: SKILL.md  __init__.py
src/sediment/: __init__.py  agent_runner.py  auth.py  benchmark_materials.py  cli.py  cli_help.py  cli_parser.py  control.py  diagnostics.py  git_ops.py  i18n.py  insights.py  instances.py  kb.py  launcher.py  llm_cli.py  package_data.py  platform_services.py  platform_store.py  quartz_runtime.py  runtime.py  server.py  server_http.py  settings.py  web_ui.py  web_ui_shared.py  web_ui_shell.py  worker.py
testcase/: TEST_PLAN.md
testcase/results_bak/: 20260411_034901_optimization.md  20260411_043600_round2_optimization.md  20260411_052730_round3_optimization.md  20260411_060100_round5_optimization.md  20260411_064500_round6_optimization.md  20260411_082500_round7_optimization.md  20260411_094648_round10_optimization.md  20260411_103144_round11_optimization.md  20260411_111047_round11_12_optimization.md  answers_scored_batched.json  answers_scored_full.json  concept_answers_batched.json  concept_answers_full.json  concept_match_batched.json  concept_match_full.json  qa_answers_batched.json  qa_answers_full.json  report_20260411_052104_full.html  report_20260411_052104_summary.html  report_20260411_055757_batched.html  report_20260411_055757_full.html  report_20260411_055757_summary.html  report_20260411_060056_full.html  (+15 more)
tests/: TEST_CASE_DESIGN.md  __init__.py  config_helpers.py  conftest.py  test_agent_backends.py  test_benchmark_harness.py  test_cli.py  test_cli_disorder_e2e.py  test_diagnostics.py  test_examples_workspace.py  test_explore_runtime.py  test_graph_hotspot_ranking.py  test_graph_neighborhood_endpoint.py  test_graph_shortest_path.py  test_kb_query.py  test_launcher.py  test_llm_cli.py  test_mcp_e2e.py  test_platform_workflow.py  test_quartz_runtime.py  test_settings.py  test_skill_assets.py  test_web_browser_e2e.py  test_web_disorder_e2e.py  test_web_e2e.py  test_web_ui_helpers.py  test_web_ui_style.py
(+498 files in other folders)
