[project]
name = "sediment"
version = "0.1.0"
description = "Tacit knowledge extraction system for AI Agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "pyyaml>=6.0.2",
    "python-docx>=1.2.0",
    "python-pptx>=1.0.2",
    "starlette>=0.37.2",
    "uvicorn>=0.30.0",
]

[project.scripts]
sediment = "mcp_server.cli:main"
sediment-server = "mcp_server.cli:legacy_server_main"
sediment-worker = "mcp_server.cli:legacy_worker_main"
sediment-up = "mcp_server.cli:legacy_up_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.4.0",
    "pytest>=8.0.0",
]

[tool.hatch.build]
include = [
    "mcp_server/**/*.py",
    "skills/**/*.py",
    "skills/**/SKILL.md",
    "skills/**/agents/*.yaml",
]

[tool.hatch.build.targets.wheel]
packages = ["mcp_server", "skills"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "BLE"]
